# tree-sitter-tera

./: Package.swift  README.md  binding.gyp  example.tera  go.mod  grammar.js  helix.just  justfile  languages.toml  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tera/: __init__.py  binding.c
bindings/rust/: build.rs
bindings/swift/TreeSitterTeraTests/: TreeSitterTeraTests.swift
examples/: docs-samples.tera  html-base-template.tera
helix-queries/: highlights.scm  injections.scm
plugin/: init.lua
queries/: highlights.scm  injections.scm  locals.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: filters.txt  for_loop.txt  macro.txt
